force-app/main/default/objects/TMDB__c/TMDB__c.object-meta.xml
<CustomObject>
    <label>TMDB</label>
    <nameField>
        <label>TMDB Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TMDB</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>