force-app/main/default/objects/TMDB__c/fields/Is_Adult__c.field-meta.xml
<CustomField>
    <fullName>Is_Adult__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Adult</label>
    <type>Checkbox</type>
</CustomField>