force-app/main/default/objects/TMDB__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <label>Language</label>
    <length>50</length>
    <type>Text</type>
</CustomField>