force-app/main/default/objects/TMDB__c/fields/Release_Year__c.field-meta.xml
<CustomField>
    <fullName>Release_Year__c</fullName>
    <label>Release Year</label>
    <type>Date</type>
</CustomField>