force-app/main/default/objects/TMDB__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>TMDB_Id__c</columns>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Release_Year__c</columns>
    <columns>Language__c</columns>
    <columns>Overview__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>